test_regress/t/t_forceable_string_bad.v
// ======================================================================
// This file ONLY is placed under the Creative Commons Public Domain, for
// any use, without warranty.
// SPDX-License-Identifier: CC0-1.0
// ======================================================================

module t;
  string str  /*verilator forceable*/;
endmodule
